--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -34,10 +34,7 @@ a:link {
   border-radius: 50px;
   border-left-color: transparent;
   border-right-color: transparent;
-  animation-name: spin;
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+  animation: 1.5s spin infinite ease-in-out;
 }
 
 @keyframes spin {
