--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 1px solid red
+} */
+
 .App {
   text-align: center;
 }
@@ -7,19 +11,50 @@
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  background-color: #ffff;
+  max-height: 80px;
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  font-size: calc(8px + 2vmin);
+  padding: 20px 32px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 36px;
 }
 
 a:link {
   text-decoration: none;
+}
+
+footer {
+  background-color: #ffff;
+  max-height: 100px;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-size: calc(8px + 2vmin);
+  padding: 20px 32px;
+  box-shadow: 0px -2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .spinner {
