--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   border: 1px solid red
-} */
+}
 
 .App {
   text-align: center;
@@ -13,7 +13,7 @@
 
 header {
   background-color: #ffff;
-  max-height: 80px;
+  max-height: 100px;
   min-height: 10vh;
   display: flex;
   flex-direction: row;
