--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   border: 1px solid red
-} */
+}
 
 .App {
   text-align: center;
@@ -27,6 +27,7 @@ header {
   top: 0;
   width: 100%;
   box-sizing: border-box;
+  margin: auto;
 }
 
 nav {
