--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   border: 1px solid red
-}
+} */
 
 .App {
   text-align: center;
@@ -90,9 +90,12 @@ footer {
   margin-right: calc(1vh - 10px);
 }
 
-
-/* h1, 
+h1, 
 h2, 
 h3 {
+font-family: 'Domine', serif;
+}
 
-} */
+p {
+  font-family: 'Open Sans', sans-serif;
+}
