--- a/src/components/CommentsContainer/CommentsContainer.css
+++ b/src/components/CommentsContainer/CommentsContainer.css
@@ -20,13 +20,14 @@ textarea:focus {
 input[type=text] {
   width: 50vw;
   height: 4vh;
+  font-family: 'Open Sans', sans-serif;
 }
 
 textarea {
   width: 50vw;
   height: 10vh;
   word-break: break-all;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .error-message,
@@ -41,7 +42,7 @@ textarea {
 
 .form-button {
   width: 10vw;
-  height: 3vh;
+  height: 4vh;
   margin: 1vh;
   margin-bottom: 3vh;
   color: white;
@@ -49,7 +50,6 @@ textarea {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   border-radius: 5px;
   background: linear-gradient(351.22deg, #473658 8.66%, #775995 95.43%);
-  border-radius: 5px;
   transition: 0.8s;
 }
 
@@ -70,7 +70,7 @@ textarea {
 
 .comment-name,
 .comment-message {
-  /* font-family: 'Apparat'; */
+  font-family: 'Open Sans', sans-serif;
   font-style: normal;
   line-height: 24px;
   display: flex;
