Update font color

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -92,10 +92,13 @@ footer {
 
 h1, 
 h2, 
-h3 {
+h3,
+h4 {
 font-family: 'Domine', serif;
+color: rgba(0, 0, 0, 0.8);
 }
 
 p {
   font-family: 'Open Sans', sans-serif;
+  color: rgba(0, 0, 0, 0.7);
 }
