--- a/src/components/TeaPage/TeaPage.css
+++ b/src/components/TeaPage/TeaPage.css
@@ -40,3 +40,25 @@
   margin-right: 32px;
 }
 
+@media screen and (max-width: 45em) {
+  .tea-header,
+  .desc-farmer {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+  }
+
+  .img-container {
+    width: 100%;
+  }
+
+  .tea-header-details {
+    text-align: center;
+    margin: 0;
+  }
+
+  .about {
+    width: 100%;
+    margin-right: 32px;
+  }
+}
