--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   border: 1px solid red
-} */
+}
 
 .App {
   text-align: center;
@@ -65,10 +65,7 @@ footer {
 
 .spinner {
   margin: auto;
-  /* margin-left: 6em;
-  margin-right: 6em; */
   display: block;
-  /* float: left; */
   border: 25px solid rgb(0, 0, 0);
   width: 1px;
   height: 1px;
@@ -103,14 +100,4 @@ p {
   color: rgba(0, 0, 0, 0.7);
 }
 
-@media screen and (max-width: 30em) {
-  body {
-    background: teal;
-  }
-
-  .tea-container {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-}
 
