--- a/src/components/TeaCard/TeaCard.css
+++ b/src/components/TeaCard/TeaCard.css
@@ -32,7 +32,7 @@ div.tea-card:hover a {
   height: auto;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   align-self: stretch;
 
 } 
