Style header buttons

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   border: 1px solid red
-}
+} */
 
 .App {
   text-align: center;
@@ -20,7 +20,7 @@ header {
   align-items: center;
   justify-content: space-between;
   font-size: calc(8px + 2vmin);
-  padding: 20px 32px;
+  padding: 0px 25px 0px 25px;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
   position: -webkit-sticky;
   position: sticky;
@@ -33,7 +33,13 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  padding: 20px 36px;
+}
+
+.nav-button {
+  padding: 0 10px;
+  margin: 0 40px 0 16px;
+  font-size: .8em;
+  cursor: pointer;
 }
 
 a:link {
