--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,13 +2,8 @@
   border: 1px solid red
 } */
 
-.App {
+main {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 header {
@@ -53,7 +48,7 @@ main {
 
 footer {
   background-color: #ffff;
-  max-height: 100px;
+  max-height: 80px;
   min-height: 10vh;
   display: flex;
   flex-direction: row;
@@ -62,9 +57,6 @@ footer {
   font-size: calc(8px + 2vmin);
   padding: 20px 32px;
   box-shadow: 0px -2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
   width: 100%;
   box-sizing: border-box;
 }
@@ -106,4 +98,7 @@ p {
   color: rgba(0, 0, 0, 0.7);
 }
 
+.logo {
+  cursor: pointer;
+}
 
