--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,9 @@
 /* * {
   border: 1px solid red
 } */
+html {
+  overflow-x: hidden;
+}
 
 main {
   text-align: center;
@@ -22,7 +25,7 @@ header {
   top: 0;
   width: 100%;
   box-sizing: border-box;
-  margin: auto;
+  margin: 0;
 }
 
 nav {
