--- a/src/components/TeaContainer/TeaContainer.css
+++ b/src/components/TeaContainer/TeaContainer.css
@@ -5,36 +5,17 @@
   grid-gap: 20px;
 }
 
-@media screen and (min-width: 55em) {
-  .tea-container {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
 
-@media screen and (max-width: 538px) {
-  .tea-container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
 
 .flex-hero {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   align-items: stretch;
-  /* width: 100%; */
-  /* height: auto; */
   margin: 0 -120px 0 -120px;
   object-fit: scale-down;
 
 }
-
-/* .comments-container,
-.tea-container {
-  margin-left: calc(1vh + 10px);
-  margin-right: calc(1vh + 10px);
-} */
 
 .hero-img {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
@@ -52,8 +33,32 @@
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.hero-p {
+  margin: -120px 0 120px 0 ;
   color: white;
+  font-size: 36px;
+  font-family: 'Domine', serif;
+}
+
+@media screen and (min-width: 55em) {
+  .tea-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+  .tea-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .hero-p {
+    font-size: 24px;
+  }
+
 }
