--- a/src/components/CommentsContainer/CommentsContainer.css
+++ b/src/components/CommentsContainer/CommentsContainer.css
@@ -45,14 +45,16 @@ textarea {
   color: white;
   cursor: pointer;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  border-radius: 5px;
-  background: linear-gradient(351.22deg, #473658 8.66%, #775995 95.43%);
-  transition: 0.8s;
+  background-color: #775995;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  transition: all 0.2s;
+  border: none;
 }
 
 .form-button:hover {
-  background-color: rgba(98, 82, 82, 0.311);
-  cursor: pointer;
+  background-color: #473658;
+  font-size: 1.2em;  
 }
 
 .title,
