--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -45,14 +45,14 @@ footer {
   max-height: 80px;
   min-height: 10vh;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  font-size: calc(8px + 2vmin);
-  padding: 20px 32px;
+  flex-direction: column;
+  align-items: left;
+  font-size: calc(8px);
   box-shadow: 0px -2.98256px 7.4564px rgba(0, 0, 0, 0.1);
   width: 100%;
   box-sizing: border-box;
+  margin: 20px 0 10px 0;
+  padding: 10px;
 }
 
 h1,
