--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,14 @@
+/* * {
+  border: 1px solid red;
+} */
+
 html {
   overflow-x: hidden;
+  height: 100%
+}
+
+body {
+  height: 100%;
 }
 
 main {
@@ -21,6 +30,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 999;
   width: 100%;
   box-sizing: border-box;
   margin: 0;
@@ -38,21 +48,29 @@ a:link {
 main {
   margin-left: calc(14vh - 10px);
   margin-right: calc(14vh - 10px);
+  padding-bottom: 20px;
 }
 
 footer {
-  background-color: #ffff;
-  max-height: 80px;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  font-size: calc(8px);
-  box-shadow: 0px -2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-  width: 100%;
+background-color: #ffff;
+/* max-height: 60px; */
+/* min-height: 8vh; */
+/* display: flex; */
+/* flex-direction: column; */
+/* align-items: left; */
+font-size: 10px;
+box-shadow: 0px -2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+/* width: 100%; */
   box-sizing: border-box;
-  margin: 20px 0 10px 0;
-  padding: 10px;
+  margin: 20px 0 0 0;
+  /* padding: 10px; */
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
 }
 
 h1,
@@ -108,8 +126,8 @@ p,
 
 .home-button,
 .about-button {
-  width: 14vw;
-  height: 4vh;
+  width: 15vw;
+  height: 6vh;
   margin: 1vh;
   margin-bottom: 3vh;
   color: white;
@@ -121,6 +139,7 @@ p,
   transition: all 0.2s;
   border: none;
   align-self: center;
+  font-size: small;
 }
 
 .pg-not-found-container {
