--- a/src/components/TeaContainer/TeaContainer.css
+++ b/src/components/TeaContainer/TeaContainer.css
@@ -6,12 +6,13 @@
 }
 
 .flex-hero {
+  align-items: stretch;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  margin: 0 -120px 0 -120px;
+  margin: 0 -120px;
   object-fit: scale-down;
+  position: relative;
 }
 
 .hero-img {
@@ -26,25 +27,26 @@
   align-items: center;
   align-self: stretch;
 }
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
+/* 
 .hero-p {
-  margin: -120px 0 120px 0 ;
+  color: #fff;
+  font-family: Domine, serif;
+  font-size: 28px;
+  padding: 0px !important;
+  margin: 0 auto;
   color: white;
-  font-size: 36px;
-  font-family: 'Domine', serif;
-}
+  text-shadow: 1px 1px 1px black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+} */
 
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 900px) {
   .tea-container {
     grid-template-columns: repeat(3, 1fr);
+    top: 40%
   }
 
 }
@@ -52,10 +54,11 @@
 @media screen and (max-width: 600px) {
   .tea-container {
     grid-template-columns: repeat(1, 1fr);
+    top: 30%
   }
 
   .hero-p {
-    font-size: 24px;
+    font-size: 20px;
   }
 
 }
