--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,14 +1,5 @@
-/* * {
-  border: 1px solid red;
-} */
-
 html {
   overflow-x: hidden;
-  height: 100%
-}
-
-body {
-  height: 100%;
 }
 
 main {
@@ -52,25 +43,25 @@ main {
 }
 
 footer {
-background-color: #ffff;
-/* max-height: 60px; */
-/* min-height: 8vh; */
-/* display: flex; */
-/* flex-direction: column; */
-/* align-items: left; */
-font-size: 10px;
-box-shadow: 0px -2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-/* width: 100%; */
+  background-color: #ffff;
+  font-size: 12px;
+  box-shadow: 0px -2.98256px 7.4564px rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
   margin: 20px 0 0 0;
-  /* padding: 10px; */
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
-  color: white;
+  background-color: #775995;
   text-align: center;
+}
+
+p.footer-text {
+  color: white;
+}
+
+p.footer-text a {
+  color: #d4c2e6
 }
 
 h1,
@@ -109,6 +100,7 @@ p,
 .tea-container {
   margin-left: calc(1vh - 10px);
   margin-right: calc(1vh - 10px);
+  padding-bottom: 80px;
 }
 
 .logo {
