--- a/src/components/TeaCard/TeaCard.css
+++ b/src/components/TeaCard/TeaCard.css
@@ -7,6 +7,8 @@
   width: 100%;
   height: auto;
   margin: 0 auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 15px -4px rgb(0 0 0 / 15%);
 }
 
 /* trying to render hover
