--- a/src/components/TeaContainer/TeaContainer.css
+++ b/src/components/TeaContainer/TeaContainer.css
@@ -27,7 +27,7 @@
   align-items: center;
   align-self: stretch;
 }
-/* 
+
 .hero-p {
   color: #fff;
   font-family: Domine, serif;
@@ -41,7 +41,7 @@
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-} */
+}
 
 @media screen and (min-width: 900px) {
   .tea-container {
